--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,38 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import { Image } from "@astrojs/image/components";
+import logoImg from "../images/parkspot-logo.png";
 ---
 
 <Layout title="Welcome to ParkSpot.">
-	<main>
-		<h1>Welcome to ParkSpot!</h1>
-	</main>
+  <nav class="mx-12">
+    <div class="grid grid-cols-3 items-center">
+      <Image src={logoImg} width={200} alt="ParkSpot logo" />
+      <div class="text-center">
+        <a href="#features">Features</a>
+        <a href="#about">About</a>
+        <a href="#testimonials">Testimonials</a>
+      </div>
+      <div class="text-right">
+        <a href="https://app.park-spot.co/login">Login</a>
+      </div>
+    </div>
+  </nav>
+  <main>
+    <div class="py-24 bg-green-400">
+      <div class="flex flex-col gap-4 mx-12 text-white items-start">
+        <h1 class="text-4xl">
+          Reclaim Your Parking Rights With Our Simple &amp; Easy-To-Use App
+        </h1>
+        <div>
+          <h2 class="text-2xl">Welcome to Parkspot!</h2>
+          <p>
+            A modern application to ensure that you and your visitors always
+            have a parking spot in your residential community!
+          </p>
+        </div>
+        <button>Contact us now!</button>
+      </div>
+    </div>
+  </main>
 </Layout>
