--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import logoImg from "../images/parkspot-logo.png";
     </div>
   </nav>
   <main>
-    <div class="py-24 bg-green-400">
+    <div class="py-24 hero-bg">
       <div class="flex flex-col gap-4 mx-12 text-white items-start">
         <h1 class="text-4xl">
           Reclaim Your Parking Rights With Our Simple &amp; Easy-To-Use App
@@ -36,3 +36,44 @@ import logoImg from "../images/parkspot-logo.png";
     </div>
   </main>
 </Layout>
+
+<style>
+  .hero-bg {
+    /*
+    background: linear-gradient(
+        45deg,
+        #13d380 34%,
+        rgba(0, 0, 0, 0) 40%,
+        #13d380 46%
+      ),
+     */
+    background: radial-gradient(
+        circle,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(19, 211, 128, 1) 62%,
+        rgba(3, 170, 96, 1) 100%
+      ),
+      linear-gradient(
+        45deg,
+        rgba(255, 255, 255, 0) 40%,
+        rgba(16, 255, 152, 1) 50%,
+        rgba(255, 255, 255, 0) 58%
+      );
+    /*
+    background: linear-gradient(
+      67deg,
+      rgba(0, 0, 0, 0) 52%,
+      #13d380 58%,
+      rgba(0, 0, 0, 0) 64%
+    );
+    */
+    /*
+    background: linear-gradient(
+      45deg,
+      #13d380 34%,
+      rgba(0, 0, 0, 0) 40%,
+      #13d380 46%
+    );
+    */
+  }
+</style>
