--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,8 @@ import logoImg from "../images/parkspot-logo.png";
     background: radial-gradient(
         circle,
         rgba(255, 255, 255, 0) 0%,
-        rgba(19, 211, 128, 1) 50%
+        rgba(19, 211, 128, 1) 62%,
+        rgba(3, 170, 96, 1) 100%
       ),
       linear-gradient(
         45deg,
