--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,41 +39,16 @@ import logoImg from "../images/parkspot-logo.png";
 
 <style>
   .hero-bg {
-    /*
-    background: linear-gradient(
-        45deg,
-        #13d380 34%,
-        rgba(0, 0, 0, 0) 40%,
-        #13d380 46%
-      ),
-     */
     background: radial-gradient(
-        circle,
-        rgba(255, 255, 255, 0) 0%,
-        rgba(19, 211, 128, 1) 62%,
-        rgba(3, 170, 96, 1) 100%
-      ),
+        circle at 95% 0%,
+        rgba(19,211,128,1) 30%, rgba(99,245,159,0.7795454545454545) 40%, rgba(19,211,128,1) 50%)
+      /*,
       linear-gradient(
         45deg,
         rgba(255, 255, 255, 0) 40%,
         rgba(16, 255, 152, 1) 50%,
         rgba(255, 255, 255, 0) 58%
-      );
-    /*
-    background: linear-gradient(
-      67deg,
-      rgba(0, 0, 0, 0) 52%,
-      #13d380 58%,
-      rgba(0, 0, 0, 0) 64%
-    );
-    */
-    /*
-    background: linear-gradient(
-      45deg,
-      #13d380 34%,
-      rgba(0, 0, 0, 0) 40%,
-      #13d380 46%
-    );
-    */
+        )
+       */;
   }
 </style>
