src/pages/index.astro: made hero responsive for md sized screens

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ import carImg from "../images/car-circle.png";
           <Image
             src={carImg}
             alt="Hero car"
-            class="absolute object-cover object-left h-full top-0 right-0"
+            class="absolute object-cover object-left md:h-fit md:m-auto md:inset-0 lg:h-full lg:top-0 lg:right-0"
           />
         </div>
       </div>
