--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ import carImg from "../images/car-circle.png";
           <Image
             src={carImg}
             alt="Hero car"
-            class="absolute object-cover object-left md:h-fit md:m-auto md:inset-0 lg:h-full lg:top-0 lg:right-0"
+            class="absolute object-cover object-left inset-0 m-auto h-fit lg:h-full"
           />
         </div>
       </div>
