--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import carImg from "../images/car-circle.png";
         <div
           class="flex flex-col gap-4 text-white items-start ml-12 sm:mr-12 sm:py-8 md:py-24"
         >
-          <h1 class="text-4xl">
+          <h1 class="text-4xl text-center md:text-left">
             Reclaim Your Parking Rights With Our Simple &amp; Easy-To-Use App
           </h1>
           <div>
