--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,27 +21,26 @@ import carImg from "../images/car-circle.png";
   </nav>
   <main>
     <div class="hero-bg">
-      <div class="md:grid md:grid-cols-2">
+      <div class="sm:grid sm:grid-cols-2">
         <div
-          class="flex flex-col gap-4 text-white items-start ml-12 sm:mr-12 sm:py-8 md:py-24"
+          class="flex flex-col gap-4 text-white items-left ml-12 mr-12 py-8 sm:py-24 sm:items-start"
         >
-          <h1 class="text-4xl text-center md:text-left">
-            Reclaim Your Parking Rights With Our Simple &amp; Easy-To-Use App
+          <h1 class="text-xl text-center font-bold sm:text-4xl sm:text-left">
+            Reclaim Your Parking Rights With ParkSpot
           </h1>
           <div>
-            <h2 class="text-2xl">Welcome to Parkspot!</h2>
-            <p>
-              A modern application to ensure that you and your visitors always
-              have a parking spot in your residential community!
+            <p class="text-center sm:text-left">
+              ParkSpot guarantees that you and your visitors will have a parking
+              spot in your community!
             </p>
           </div>
           <button>Contact us now!</button>
         </div>
-        <div class="md:relative md:overflow-hidden">
+        <div class="sm:relative sm:overflow-hidden">
           <Image
             src={carImg}
             alt="Hero car"
-            class="sm:h-72 sm:object-contain md:absolute md:object-cover md:object-left md:inset-0 md:m-auto md:h-fit lg:h-full"
+            class="h-72 object-contain sm:absolute sm:object-cover sm:object-left sm:inset-0 sm:m-auto sm:h-fit lg:h-full"
           />
         </div>
       </div>
