--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,16 +6,18 @@ import carImg from "../images/car-circle.png";
 ---
 
 <Layout title="Welcome to ParkSpot.">
-  <nav class="mx-12">
-    <div class="grid grid-cols-3 items-center">
-      <Image src={logoImg} width={200} alt="ParkSpot logo" />
-      <div class="text-center">
-        <a href="#features">Features</a>
-        <a href="#about">About</a>
-        <a href="#testimonials">Testimonials</a>
-      </div>
-      <div class="text-right">
-        <a href="https://app.park-spot.co/login">Login</a>
+  <nav class="sm:relative">
+    <div class="mx-12 my-4 sm:absolute sm:left-0 sm:right-0 sm:z-10">
+      <div class="grid grid-cols-3 items-center">
+        <Image src={logoImg} width={200} alt="ParkSpot logo" />
+        <div class="text-center">
+          <a href="#features">Features</a>
+          <a href="#about">About</a>
+          <a href="#testimonials">Testimonials</a>
+        </div>
+        <div class="text-right">
+          <a href="https://app.park-spot.co/login">Login</a>
+        </div>
       </div>
     </div>
   </nav>
