--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,29 +22,27 @@ import carImg from "../images/car-circle.png";
     </div>
   </nav>
   <main>
-    <div class="hero-bg">
-      <div class="sm:grid sm:grid-cols-2">
-        <div
-          class="flex flex-col gap-4 text-white items-left ml-12 mr-12 py-8 sm:py-24 sm:items-start"
-        >
-          <h1 class="text-xl text-center font-bold sm:text-4xl sm:text-left">
-            Reclaim Your Parking Rights With ParkSpot
-          </h1>
-          <div>
-            <p class="text-center sm:text-left">
-              ParkSpot guarantees that you and your visitors will have a parking
-              spot in your community!
-            </p>
-          </div>
-          <button>Contact us now!</button>
+    <div class="hero-bg sm:grid sm:grid-cols-2">
+      <div
+        class="flex flex-col gap-4 text-white items-left ml-12 mr-12 py-8 sm:py-24 sm:items-start"
+      >
+        <h1 class="text-xl text-center font-bold sm:text-4xl sm:text-left">
+          Reclaim Your Parking Rights With ParkSpot
+        </h1>
+        <div>
+          <p class="text-center sm:text-left">
+            ParkSpot guarantees that you and your visitors will have a parking
+            spot in your community!
+          </p>
         </div>
-        <div class="sm:relative sm:overflow-hidden">
-          <Image
-            src={carImg}
-            alt="Hero car"
-            class="h-72 object-contain sm:absolute sm:z-0 sm:object-cover sm:object-left sm:inset-0 sm:m-auto sm:h-fit lg:h-full"
-          />
-        </div>
+        <button>Contact us now!</button>
+      </div>
+      <div class="sm:relative sm:overflow-hidden">
+        <Image
+          src={carImg}
+          alt="Hero car"
+          class="h-72 object-contain sm:absolute sm:z-0 sm:object-cover sm:object-left sm:inset-0 sm:m-auto sm:h-fit lg:h-full"
+        />
       </div>
     </div>
   </main>
