--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import carImg from "../images/car-circle.png";
   <main>
     <div class="hero-bg sm:grid sm:grid-cols-2">
       <div
-        class="flex flex-col gap-4 text-white items-left ml-12 mr-12 py-8 sm:py-24 sm:items-start"
+        class="flex flex-col gap-4 text-white items-left ml-12 mr-12 py-8 sm:pt-36 sm:pb-24 sm:items-start"
       >
         <h1 class="text-xl text-center font-bold sm:text-4xl sm:text-left">
           Reclaim Your Parking Rights With ParkSpot
