--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import carImg from "../images/car-circle.png";
   <main>
     <div class="hero-bg sm:grid sm:grid-cols-2">
       <div
-        class="flex flex-col gap-4 text-white items-left ml-12 mr-12 py-8 sm:pt-36 sm:pb-24 sm:items-start"
+        class="flex flex-col gap-4 text-white items-left mx-12 py-8 sm:pt-44 sm:pb-36 sm:items-start lg:ml-24 lg:mr-12"
       >
         <h1 class="text-xl text-center font-bold sm:text-4xl sm:text-left">
           Reclaim Your Parking Rights With ParkSpot
@@ -41,7 +41,7 @@ import carImg from "../images/car-circle.png";
         <Image
           src={carImg}
           alt="Hero car"
-          class="h-72 object-contain sm:absolute sm:z-0 sm:object-cover sm:object-left sm:inset-0 sm:m-auto sm:h-fit lg:h-full"
+          class="h-72 object-contain sm:absolute sm:z-0 sm:object-cover sm:object-left sm:inset-0 sm:m-auto sm:h-fit xl:h-full"
         />
       </div>
     </div>
