--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import carImg from "../images/car-circle.png";
 
 <Layout title="Welcome to ParkSpot.">
   <nav class="sm:relative">
-    <div class="mx-12 my-4 sm:absolute sm:left-0 sm:right-0 sm:z-10">
+    <div class="mx-12 py-4 sm:absolute sm:left-0 sm:right-0 sm:z-10 lg:mx-24">
       <div class="grid grid-cols-3 items-center">
         <Image src={logoImg} width={200} alt="ParkSpot logo" />
         <div class="text-center">
