src/pages/index.astro: made car only be giant for 2xl screens

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import carImg from "../images/car-circle.png";
         <Image
           src={carImg}
           alt="Hero car"
-          class="h-72 object-contain sm:absolute sm:z-0 sm:object-cover sm:object-left sm:inset-0 sm:m-auto sm:h-fit xl:h-full"
+          class="h-72 object-contain sm:absolute sm:z-0 sm:object-cover sm:object-left sm:inset-0 sm:m-auto sm:h-fit 2xl:h-full"
         />
       </div>
     </div>
