src/pages/index.astro: made margin of hero text mx-4 by default, and mx-12 only on md screens

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import carImg from "../images/car-circle.png";
   <main>
     <div class="hero-bg sm:grid sm:grid-cols-2">
       <div
-        class="flex flex-col gap-4 text-white items-left mx-12 py-8 sm:pt-52 sm:pb-48 sm:items-start lg:ml-24 lg:mr-12"
+        class="flex flex-col gap-4 text-white items-left mx-4 py-8 sm:pt-52 sm:pb-48 sm:items-start md:mx-12 lg:ml-24 lg:mr-12"
       >
         <h1 class="text-xl text-center font-bold sm:text-6xl sm:text-left">
           Reclaim Your Parking Rights With ParkSpot
