--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,13 +9,13 @@ import carImg from "../images/car-circle.png";
   <nav class="sm:relative">
     <div class="mx-12 py-4 sm:absolute sm:left-0 sm:right-0 sm:z-10 lg:mx-24">
       <div class="grid grid-cols-3 items-center">
-        <Image src={logoImg} width={200} alt="ParkSpot logo" />
-        <div class="text-center">
+        <Image src={logoImg} width={150} alt="ParkSpot logo" />
+        <div class="flex flex-row justify-center gap-8 text-center text-white">
           <a href="#features">Features</a>
           <a href="#about">About</a>
           <a href="#testimonials">Testimonials</a>
         </div>
-        <div class="text-right">
+        <div class="text-right text-white">
           <a href="https://app.park-spot.co/login">Login</a>
         </div>
       </div>
