--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,9 @@ import carImg from "../images/car-circle.png";
 
 <Layout title="Welcome to ParkSpot.">
   <nav class="sm:relative">
-    <div class="mx-12 py-4 sm:absolute sm:left-0 sm:right-0 sm:z-10 lg:mx-24">
+    <div
+      class="mx-4 py-4 sm:absolute sm:left-0 sm:right-0 sm:z-10 md:mx-12 lg:mx-24"
+    >
       <div class="grid grid-cols-3 items-center">
         <Image src={logoImg} width={150} alt="ParkSpot logo" />
         <div class="flex flex-row justify-center gap-8 text-center text-white">
@@ -24,7 +26,7 @@ import carImg from "../images/car-circle.png";
   <main>
     <div class="hero-bg sm:grid sm:grid-cols-2">
       <div
-        class="flex flex-col gap-4 text-white items-left mx-4 py-8 sm:pt-52 sm:pb-48 sm:items-start md:mx-12 lg:ml-24 lg:mr-12"
+        class="flex flex-col gap-4 text-white items-left mx-4 py-8 sm:pt-36 sm:pb-32 sm:items-start md:mx-12 lg:pt-52 lg:pb-48 lg:ml-24 lg:mr-12"
       >
         <h1 class="text-xl text-center font-bold sm:text-6xl sm:text-left">
           Reclaim Your Parking Rights With ParkSpot
