--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,9 +24,9 @@ import carImg from "../images/car-circle.png";
     </div>
   </nav>
   <main>
-    <div class="hero-bg sm:grid sm:grid-cols-2">
+    <div class="hero-bg sm:grid sm:grid-cols-2 h-screen items-center">
       <div
-        class="flex flex-col gap-4 text-white items-left mx-4 py-8 sm:pt-28 sm:pb-24 sm:items-start md:mx-12 lg:pt-52 lg:pb-48 lg:ml-24 lg:mr-12"
+        class="flex flex-col gap-4 text-white items-left mx-4 py-8 sm:items-start md:mx-12 lg:ml-24 lg:mr-12"
       >
         <h1 class="text-xl text-center font-bold sm:text-6xl sm:text-left">
           Reclaim Your Parking Rights With ParkSpot
@@ -39,11 +39,11 @@ import carImg from "../images/car-circle.png";
         </div>
         <button>Contact us now!</button>
       </div>
-      <div class="sm:relative sm:overflow-hidden">
+      <div>
         <Image
           src={carImg}
           alt="Hero car"
-          class="h-72 object-contain sm:absolute sm:z-0 sm:object-cover sm:object-left sm:inset-0 sm:m-auto sm:h-fit 2xl:h-full"
+          class="h-72 object-contain sm:h-fit"
         />
       </div>
     </div>
