--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,17 +52,14 @@ import carImg from "../images/car-circle.png";
 
 <style>
   .hero-bg {
-    background: radial-gradient(
+    background-image: radial-gradient(
         circle,
         rgba(255, 255, 255, 0) 0%,
         rgba(19, 211, 128, 1) 32%,
         rgba(3, 170, 96, 1) 100%
       ),
-      linear-gradient(
-        45deg,
-        rgba(255, 255, 255, 0) 40%,
-        rgba(16, 255, 152, 1) 50%,
-        rgba(255, 255, 255, 0) 58%
-      );
+      url("../images/parkspot-emblem.png");
+    background-position: center, center;
+    background-size: auto, 10px;
   }
 </style>
