src/pages/index.astro: removed unnecessary div

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,13 +39,7 @@ import carImg from "../images/car-circle.png";
         </div>
         <button>Contact us now!</button>
       </div>
-      <div>
-        <Image
-          src={carImg}
-          alt="Hero car"
-          class="h-72 object-contain sm:h-fit"
-        />
-      </div>
+      <Image src={carImg} alt="Hero car" class="h-72 object-contain sm:h-fit" />
     </div>
   </main>
 </Layout>
