src/pages/index.astro: creating top padding of text only for extra small screens

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import carImg from "../images/car-circle.png";
   <main>
     <div class="hero-bg sm:grid sm:grid-cols-2 h-screen items-center">
       <div
-        class="flex flex-col gap-4 text-white mx-4 pt-24 sm:items-start md:mx-12 md:pt-0 lg:ml-24 lg:mr-12"
+        class="flex flex-col gap-4 text-white mx-4 pt-24 sm:items-start sm:pt-0 md:mx-12 lg:ml-24 lg:mr-12"
       >
         <h1 class="text-xl text-center font-bold sm:text-6xl sm:text-left">
           Reclaim Your Parking Rights With ParkSpot
