--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,11 @@ import carImg from "../images/car-circle.png";
 <Layout title="Welcome to ParkSpot.">
   <nav class="relative">
     <div class="mx-4 py-4 absolute left-0 right-0 sm:z-10 md:mx-12 lg:mx-24">
-      <div class="grid grid-cols-3 items-center">
+      <div class="grid items-center grid-cols-2 sm:grid-cols-3">
         <Image src={logoImg} width={150} alt="ParkSpot logo" />
-        <div class="flex flex-row justify-between text-center text-white">
+        <div
+          class="hidden sm:block flex flex-row justify-between text-center text-white"
+        >
           <a href="#features">Features</a>
           <a href="#about">About</a>
           <a href="#testimonials">Testimonials</a>
