src/pages/index.astro: fixed nav link bug from prev commit

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import carImg from "../images/car-circle.png";
       <div class="grid items-center grid-cols-2 sm:grid-cols-3">
         <Image src={logoImg} width={150} alt="ParkSpot logo" />
         <div
-          class="hidden sm:block flex flex-row justify-between text-center text-white"
+          class="hidden sm:block sm:flex sm:flex-row sm:justify-between sm:text-center sm:text-white"
         >
           <a href="#features">Features</a>
           <a href="#about">About</a>
