src/pages/index.astro: made logo look less blurry

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,9 @@ import carImg from "../images/car-circle.png";
   <nav class="relative">
     <div class="mx-4 py-4 absolute left-0 right-0 sm:z-10 md:mx-12 lg:mx-24">
       <div class="grid items-center grid-cols-2 sm:grid-cols-3">
-        <Image src={logoImg} width={150} alt="ParkSpot logo" />
+        <a href="/">
+          <img src={logoImg.src} class="h-auto w-28" alt="ParkSpot Logo" />
+        </a>
         <div
           class="hidden sm:block sm:flex sm:flex-row sm:justify-between sm:text-center sm:text-white"
         >
