--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import carImg from "../images/car-circle.png";
     <div class="hero-bg sm:flex sm:flex-row sm:justify-center">
       <div class="sm:grid sm:grid-cols-2 sm:items-center sm:max-w-7xl">
         <div
-          class="flex flex-col gap-4 text-white mx-4 pt-20 sm:items-start sm:pt-36 sm:pb-32 md:mx-12 lg:ml-24 lg:mr-12"
+          class="flex flex-col gap-4 text-white pl-4 pt-20 sm:items-start sm:pt-36 sm:pb-32 md:pl-12 lg:pl-24 xl:pl-0"
         >
           <h1 class="text-xl text-center font-bold sm:text-6xl sm:text-left">
             Reclaim Your Parking Rights With ParkSpot
