src/pages/index.astro: removed `Image` from astro import

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import { Image } from "@astrojs/image/components";
 import logoImg from "../images/parkspot-logo.png";
 import carImg from "../images/car-circle.png";
 ---
@@ -13,9 +12,7 @@ import carImg from "../images/car-circle.png";
           <img src={logoImg.src} class="h-auto w-28" alt="ParkSpot Logo" />
         </a>
         <div class="hidden sm:block sm:flex sm:flex-row sm:justify-center">
-          <div
-            class="justify-between flex flex-row text-white w-80"
-          >
+          <div class="justify-between flex flex-row text-white w-80">
             <a href="#features">Features</a>
             <a href="#about">About</a>
             <a href="#testimonials">Testimonials</a>
