--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import carImg from "../images/car-circle.png";
+import carsParkingImg from "../images/cars-parking.png";
 ---
 
 <Layout title="Welcome to ParkSpot.">
   <main>
-    <div class="hero-bg sm:flex sm:flex-row sm:justify-center">
+    <div class="hero-bg sm:flex sm:flex-row sm:justify-center rounded-b-lg">
       <div class="sm:grid sm:grid-cols-2 sm:items-center sm:max-w-7xl">
         <div
           class="flex flex-col gap-4 text-white mx-4 pt-20 sm:items-start sm:pt-36 sm:pb-32 md:mx-12 lg:ml-24 lg:mr-12"
@@ -27,6 +28,31 @@ import carImg from "../images/car-circle.png";
             alt="Hero car"
             class="h-72 object-contain sm:object-cover sm:h-full"
           />
+        </div>
+      </div>
+    </div>
+    <div class="mx-4 mt-8 sm:grid sm:grid-cols-2 sm:gap-4 md:mx-12 lg:mx-24">
+      <div class="bg-black rounded-lg col-span-2 py-12 px-8 sm:px-4 sm:flex sm:flex-row sm:justify-center">
+        <div class="sm:grid sm:grid-cols-2 sm:max-w-7xl">
+          <div class="flex flex-col justify-center sm:items-start sm:mx-12">
+            <p class="text-green-500">WHY PARKSPOT?</p>
+            <h2 class="text-white text-4xl mb-4">
+              ParkSpot Fixes Your Community's Parking Problems
+            </h2>
+            <p class="text-white">
+              ParkSpot was designed to protect your residential parking rights,
+              by making sure that everyone abides by the community parking
+              policy. That way, you’ll have the best chances of coming home to
+              vacant and well-situated parking spots.
+            </p>
+          </div>
+          <div class="flex flex-row justify-center my-8">
+            <img
+              src={carsParkingImg.src}
+              alt="Cars Parking"
+              class="object-cover h-72"
+            />
+          </div>
         </div>
       </div>
     </div>
