--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,13 +62,21 @@ import carsParkingImg from "../images/cars-parking.png";
 <style>
   .hero-bg {
     background-image: radial-gradient(
-        circle,
+        circle at center,
         rgba(255, 255, 255, 0) 0%,
-        rgba(19, 211, 128, 1) 32%,
+        #13d380 32%,
         rgba(3, 170, 96, 1) 100%
       ),
       url("../images/parkspot-emblem.png");
     background-position: center, center;
     background-size: auto, 10px;
+  }
+
+  .section-1-bg {
+    background-image: radial-gradient(
+      ellipse at bottom left,
+      #13d380 8%,
+      #000 20%
+    );
   }
 </style>
