--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import carsParkingImg from "../images/cars-parking.png";
 
 <Layout title="Welcome to ParkSpot.">
   <main>
-    <div class="hero-bg sm:flex sm:flex-row sm:justify-center rounded-b-lg">
+    <div class="hero-bg sm:flex sm:flex-row sm:justify-center sm:rounded-b-lg">
       <div class="sm:grid sm:grid-cols-2 sm:items-center sm:max-w-7xl">
         <div
           class="flex flex-col gap-4 text-white mx-4 pt-20 sm:items-start sm:pt-36 sm:pb-32 md:mx-12 lg:ml-24 lg:mr-12"
@@ -31,8 +31,12 @@ import carsParkingImg from "../images/cars-parking.png";
         </div>
       </div>
     </div>
-    <div class="mx-4 mt-8 sm:grid sm:grid-cols-2 sm:gap-4 md:mx-12 lg:mx-24">
-      <div class="bg-black rounded-lg col-span-2 py-12 px-8 sm:px-4 sm:flex sm:flex-row sm:justify-center">
+    <div
+      class="mx-0 mt-0 sm:mt-8 sm:mx-4 sm:grid sm:grid-cols-2 sm:gap-4 md:mx-12 lg:mx-24"
+    >
+      <div
+        class="section-1-bg col-span-2 py-12 px-8 sm:rounded-lg sm:px-0 sm:flex sm:flex-row sm:justify-center"
+      >
         <div class="sm:grid sm:grid-cols-2 sm:max-w-7xl">
           <div class="flex flex-col justify-center sm:items-start sm:mx-12">
             <p class="text-green-500">WHY PARKSPOT?</p>
