src/pages/index.astro: fixed community image from letting image get stretched

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,7 +86,7 @@ import dashboardCorner from "../images/dashboard-corner.png";
             <img
               src={community.src}
               alt="Happy Community"
-              class="h-48 object-contain sm:h-full sm:object-fill xl:h-72 xl:object-contain"
+              class="h-48 object-contain sm:h-full sm:object-cover lg:h-72 lg:object-contain"
             />
           </div>
           <div class="bg-zinc-950 flex flex-col sm:rounded-lg">
