src/pages/index.astro: made bg s be in the middle

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -161,6 +161,6 @@ import dashboardCorner from "../images/dashboard-corner.png";
     background-image: url("../images/parkspot-emblem-white.png"),
       linear-gradient(to right, #13d380, #13d380);
     background-repeat: no-repeat;
-    background-position: right;
+    background-position: center;
   }
 </style>
