src/pages/index.astro: fixed-up comments a bit. also changed parent white section div to use padding logic to keep banners bounded. before the child of that div (aka the div that holds all the banners was keeping banners bounded with margin logic)

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,12 +34,10 @@ import dashboardCorner from "../images/dashboard-corner.png";
         </div>
       </div>
     </div>
-    <!-- the div right below this comment is needed for centering all the sections -->
-    <div class="flex flex-col items-center">
-      <!-- the div right below this comment is contains all the sections -->
-      <div
-        class="max-w-7xl flex flex-col mx-0 my-0 sm:gap-8 sm:my-8 sm:mx-4 md:mx-12 lg:mx-24"
-      >
+    <!-- the div right below this comment is needed for centering all the banners in the white section -->
+    <div class="flex flex-col items-center sm:py-8 sm:px-4 md:px-12 lg:px-24">
+      <!-- the div right below this comment is contains all the banners in the white section -->
+      <div class="max-w-7xl flex flex-col mx-0 my-0 sm:gap-4">
         <div
           class="section-1-bg col-span-2 py-12 px-8 sm:rounded-lg sm:px-0 sm:flex sm:flex-row sm:justify-center"
         >
