--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -116,13 +116,14 @@ import dashboardCorner from "../images/dashboard-corner.png";
         </div>
       </div>
     </div>
+    <!-- the div right below this comment is needed for centering all the banners in the gray section. it has the same padding logic of parent div of white section -->
     <div
       class="bg-gray-200 flex flex-col items-center sm:py-8 sm:px-4 md:px-12 lg:px-24"
     >
       <div
         class="bg-green-with-s sm:grid sm:grid-cols-2 sm:rounded-lg max-w-7xl"
       >
-        <div class="py-12 px-12">
+        <div class="pt-12 px-12 sm:py-12 sm:px-12">
           <div class="text-white flex flex-col gap-4 items-start">
             <h2 class="text-4xl">
               Parking Control and Monitoring Have Never Been Easier!
@@ -168,7 +169,7 @@ import dashboardCorner from "../images/dashboard-corner.png";
 
   .bg-green-with-s {
     background-image: url("../images/parkspot-emblem-white.png"),
-      linear-gradient(to right, #13d380, #13d380);
+      linear-gradient(to right, #13d380, #13d380); /* hack to layer image over solid color */
     background-repeat: no-repeat;
     background-position: center;
   }
