--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,9 +10,11 @@ import dashboardCorner from "../images/dashboard-corner.png";
 <Layout title="Welcome to ParkSpot.">
   <main>
     <div class="hero-bg sm:flex sm:flex-row sm:justify-center sm:rounded-b-lg">
-      <div class="sm:grid sm:grid-cols-2 sm:items-center sm:max-w-7xl">
+      <div
+        class="flex flex-col gap-4 sm:gap-0 sm:grid sm:grid-cols-2 sm:items-center sm:max-w-7xl"
+      >
         <div
-          class="flex flex-col gap-4 text-white mx-4 pt-20 sm:items-start sm:pt-36 sm:pb-32 md:mx-12 lg:ml-24 lg:mr-12"
+          class="flex flex-col gap-4 text-white mx-4 pt-20 items-center sm:items-start sm:pt-36 sm:pb-32 md:mx-12 lg:ml-24 lg:mr-12"
         >
           <h1 class="text-xl text-center font-bold sm:text-6xl sm:text-left">
             Reclaim Your Parking Rights With ParkSpot
@@ -23,7 +25,9 @@ import dashboardCorner from "../images/dashboard-corner.png";
               spot in your community!
             </p>
           </div>
-          <button>Contact us now!</button>
+          <button class="bg-black py-2 px-4 rounded-lg">
+            Contact us now!
+          </button>
         </div>
         <div class="flex flex-row justify-center">
           <img
