--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -148,17 +148,25 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
       </div>
     </div>
     <!-- the div right below this comment is the footer. it has the same padding logic as the parent divs of white and gray sections -->
-    <div class="sm:py-8 sm:px-4 md:px-12 lg:px-24">
-      <div
-        class="mx-auto flex flex-row justify-between max-w-7xl text-neutral-400 text-xs"
-      >
-        <div class="flex flex-col gap-4 items-start">
-          <img src={logoImg.src} class="h-auto w-28" alt="ParkSpot Logo" />
-          <p>The friendly residential parking app.</p>
-        </div>
-        <div class="flex flex-col justify-between items-start">
-          <img src={linkedinLogo.src} class="h-auto w-3" alt="Linkedin Logo" />
-          <p>parkspotapplication@gmail.com</p>
+    <div class="py-8 px-4 md:px-12 lg:px-24">
+      <div class="flex flex-col mx-auto">
+        <div
+          class="flex flex-col gap-4 items-center text-neutral-400 text-xs sm:flex-row sm:justify-between sm:max-w-7xl text-neutral-400 text-xs"
+        >
+          <div class="flex flex-col gap-4 items-center sm:items-start">
+            <img src={logoImg.src} class="h-auto w-28" alt="ParkSpot Logo" />
+            <p>The friendly residential parking app.</p>
+          </div>
+          <div
+            class="flex flex-col items-center gap-2 sm:items-start sm:justify-between"
+          >
+            <img
+              src={linkedinLogo.src}
+              class="h-auto w-3"
+              alt="Linkedin Logo"
+            />
+            <p>parkspotapplication@gmail.com</p>
+          </div>
         </div>
       </div>
     </div>
