src/pages/index.astro: small alignment change

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -157,9 +157,7 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
             <img src={logoImg.src} class="h-auto w-28" alt="ParkSpot Logo" />
             <p>The friendly residential parking app.</p>
           </div>
-          <div
-            class="flex flex-col items-center gap-2 sm:items-start sm:justify-between"
-          >
+          <div class="flex flex-col items-center gap-2 sm:gap-4 sm:items-start">
             <img
               src={linkedinLogo.src}
               class="h-auto w-3"
