--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -151,7 +151,7 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
     <div class="py-8 px-4 md:px-12 lg:px-24">
       <div class="flex flex-col mx-auto">
         <div
-          class="flex flex-col gap-4 items-center text-neutral-400 text-xs sm:flex-row sm:justify-between sm:max-w-7xl text-neutral-400 text-xs"
+          class="flex flex-col gap-4 items-center text-neutral-400 text-xs sm:flex-row sm:justify-between sm:max-w-7xl"
         >
           <div class="flex flex-col gap-4 items-center sm:items-start">
             <img src={logoImg.src} class="h-auto w-28" alt="ParkSpot Logo" />
