src/pages/index.astro: finished v1 of landing page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -149,9 +149,9 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
     </div>
     <!-- the div right below this comment is the footer. it has the same padding logic as the parent divs of white and gray sections -->
     <div class="py-8 px-4 md:px-12 lg:px-24">
-      <div class="flex flex-col mx-auto">
+      <div class="flex flex-col mx-auto text-neutral-400 text-xs gap-4">
         <div
-          class="flex flex-col gap-4 items-center text-neutral-400 border-b text-xs py-8 sm:flex-row sm:justify-between sm:max-w-7xl"
+          class="flex flex-col gap-4 items-center border-b py-8 sm:flex-row sm:justify-between sm:max-w-7xl"
         >
           <div class="flex flex-col gap-4 items-center sm:items-start">
             <img src={logoImg.src} class="h-auto w-28" alt="ParkSpot Logo" />
@@ -166,6 +166,7 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
             <p>parkspotapplication@gmail.com</p>
           </div>
         </div>
+        <p>&copy; 2023 ParkSpot | Designed with heart by Team Softriver.</p>
       </div>
     </div>
   </main>
