src/pages/index.astro: made contact us buttons actually clickable

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,9 +27,12 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
               spot in your community!
             </p>
           </div>
-          <button class="bg-black py-2 px-4 rounded-lg">
+          <a
+            href="mailto:parkspotapplication@gmail.com"
+            class="bg-black py-2 px-4 rounded-lg"
+          >
             Contact us now!
-          </button>
+          </a>
         </div>
         <div class="flex flex-row justify-center">
           <img
@@ -137,9 +140,12 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
               product, onboard everyone, and provide 24/7 customer support for
               free for the first 6 months!
             </p>
-            <button class="bg-black py-2 px-4 rounded-lg">
+            <a
+              href="mailto:parkspotapplication@gmail.com"
+              class="bg-black py-2 px-4 rounded-lg"
+            >
               Contact us now!
-            </button>
+            </a>
           </div>
         </div>
         <div class="flex flex-col justify-center">
