src/pages/index.astro: made linkedin logo clickable

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -164,11 +164,13 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
             <p>The friendly residential parking app.</p>
           </div>
           <div class="flex flex-col items-center gap-2 sm:gap-4 sm:items-start">
-            <img
-              src={linkedinLogo.src}
-              class="h-auto w-3"
-              alt="Linkedin Logo"
-            />
+            <a href="https://www.linkedin.com/company/park-spot/about/">
+              <img
+                src={linkedinLogo.src}
+                class="h-auto w-3"
+                alt="Linkedin Logo"
+              /></a
+            >
             <p>parkspotapplication@gmail.com</p>
           </div>
         </div>
