src/pages/index.astro: made design note get centered for small screens

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -174,7 +174,9 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
             <p>parkspotapplication@gmail.com</p>
           </div>
         </div>
-        <p>&copy; 2023 ParkSpot | Designed with heart by Team Softriver.</p>
+        <p class="mx-auto sm:mx-0">
+          &copy; 2023 ParkSpot | Designed with heart by Team Softriver.
+        </p>
       </div>
     </div>
   </main>
