src/pages/index.astro: made email at page bottom clickable

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -171,7 +171,9 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
                 alt="Linkedin Logo"
               />
             </a>
-            <p>parkspotapplication@gmail.com</p>
+            <a href="mailto:parkspotapplication@gmail.com"
+              >parkspotapplication@gmail.com</a
+            >
           </div>
         </div>
         <p class="mx-auto sm:mx-0">
