using mobile app image instead of car with circle.
files changed:
D src/images/car-circle.png
A src/images/mobile-app.png
M src/pages/index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import carImg from "../images/car-circle.png";
+import mobileAppImg from "../images/mobile-app.png";
 import gateImg from "../images/gate.png";
 import community from "../images/community.png";
 import carsParkingImg from "../images/cars-parking.png";
@@ -36,9 +36,9 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
         </div>
         <div class="flex flex-row justify-center">
           <img
-            src={carImg.src}
-            alt="Hero car"
-            class="h-72 object-contain sm:object-cover sm:h-full"
+            src={mobileAppImg.src}
+            alt="Park Spot Mobile App"
+            class="w-52 sm:w-80"
           />
         </div>
       </div>
