--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,9 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
 
 <Layout title="Welcome to ParkSpot.">
   <main>
-    <div class="hero-bg sm:flex sm:flex-row sm:justify-center sm:rounded-b-lg">
+    <div class="hero-bg sm:rounded-b-lg">
       <div
-        class="flex flex-col gap-4 sm:gap-0 sm:grid sm:grid-cols-2 sm:items-center sm:max-w-7xl"
+        class="flex flex-col gap-4 mx-auto my-0 sm:gap-0 sm:grid sm:grid-cols-2 sm:items-center sm:max-w-7xl"
       >
         <div
           class="flex flex-col gap-4 text-white mx-4 pt-20 items-center sm:items-start sm:pt-36 sm:pb-32 md:mx-12 lg:ml-24 lg:mr-12"
