--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import mobileAppImg from "../images/mobile-app.png";
-import desktopAppImg from "../images/desktop-app.png";
+import laptopAppImg from "../images/laptop-app.png";
 import gateImg from "../images/gate.png";
 import community from "../images/community.png";
 import carsParkingImg from "../images/cars-parking.png";
@@ -35,9 +35,7 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
             Contact us now!
           </a>
         </div>
-        <div class="flex flex-row justify-center">
-          <img src={desktopAppImg.src} alt="Park Spot Desktop App" />
-        </div>
+          <img src={laptopAppImg.src} alt="Laptop With ParkSpot App" />
       </div>
     </div>
     <!-- the div right below this comment is the white section -->
@@ -65,7 +63,7 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
             </div>
               <img
                 src={mobileAppImg.src}
-                alt="Desktop Mobile App"
+                alt="Phone With ParkSpot App"
                 class="object-cover w-64 mx-auto sm:my-8"
               />
           </div>
