trying laptop app floating A src/images/laptop-app-floating.png M src/pages/index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import mobileAppImg from "../images/mobile-app.png";
-import laptopAppImg from "../images/laptop-app.png";
+import laptopAppImg from "../images/laptop-app-floating.png";
 import gateImg from "../images/gate.png";
 import community from "../images/community.png";
 import carsParkingImg from "../images/cars-parking.png";
