--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
   <main>
     <div class="hero-bg sm:rounded-b-lg">
       <div
-        class="flex flex-col gap-4 mx-auto my-0 sm:gap-0 sm:grid sm:grid-cols-2 sm:items-center sm:max-w-7xl"
+        class="flex flex-col gap-4 mx-auto my-0 pb-4 sm:gap-0 sm:grid sm:grid-cols-2 sm:items-center sm:max-w-7xl sm:pb-0"
       >
         <div
           class="flex flex-col gap-4 text-white mx-4 pt-20 items-center sm:items-start sm:pt-36 sm:pb-32 md:mx-12 lg:ml-24 lg:mr-12"
@@ -43,9 +43,9 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
       <!-- the div right below this comment is contains all the banners in the white section -->
       <div class="max-w-7xl flex flex-col mx-auto my-0 sm:gap-4">
         <div
-          class="section-1-bg col-span-2 py-12 px-8 sm:rounded-lg sm:px-0 sm:flex sm:flex-row sm:justify-center sm:py-0"
+          class="section-1-bg col-span-2 py-8 px-8 sm:rounded-lg sm:px-0 sm:flex sm:flex-row sm:justify-center sm:py-0"
         >
-          <div class="sm:grid sm:grid-cols-2 sm:gap-4 sm:max-w-7xl">
+          <div class="flex flex-col gap-8 sm:grid sm:grid-cols-2 sm:gap-4 sm:max-w-7xl">
             <div
               class="flex flex-col justify-center gap-4 sm:items-start sm:mx-12"
             >
@@ -72,7 +72,7 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
           <div
             class="bg-gray-200 flex flex-col sm:justify-between sm:rounded-lg"
           >
-            <div class="flex flex-col gap-4 px-12 pt-12">
+            <div class="flex flex-col gap-4 px-12 pt-8">
               <p class="text-green-500">OUR GOAL</p>
               <h2 class="text-zinc-950 text-4xl mb-4">
                 Fair Visitor Parking For Everyone
@@ -93,7 +93,7 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
             />
           </div>
           <div class="bg-zinc-950 flex flex-col sm:rounded-lg">
-            <div class="flex flex-col gap-4 px-12 py-12">
+            <div class="flex flex-col gap-4 px-12 py-8">
               <p class="text-green-500">OUR SOLUTION</p>
               <h2 class="text-white text-4xl mb-4">
                 Policy &amp; Data-Driven Software
@@ -121,7 +121,7 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
       <div
         class="bg-[#13d380] bg-green-with-s max-w-7xl mx-auto sm:grid sm:grid-cols-2 sm:rounded-lg"
       >
-        <div class="pt-12 px-12 sm:py-12 sm:px-12">
+        <div class="pt-8 px-12 sm:py-12 sm:px-12">
           <div class="text-white flex flex-col gap-4 items-start">
             <h2 class="text-4xl">
               Parking Control and Monitoring Have Never Been Easier!
