src/pages/index.astro: made offering a little less generous

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,9 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
         <div
           class="section-1-bg col-span-2 py-8 px-8 sm:rounded-lg sm:px-0 sm:flex sm:flex-row sm:justify-center sm:py-0"
         >
-          <div class="flex flex-col gap-8 sm:grid sm:grid-cols-2 sm:gap-4 sm:max-w-7xl">
+          <div
+            class="flex flex-col gap-8 sm:grid sm:grid-cols-2 sm:gap-4 sm:max-w-7xl"
+          >
             <div
               class="flex flex-col justify-center gap-4 sm:items-start sm:mx-12"
             >
@@ -127,9 +129,9 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
               Parking Control and Monitoring Have Never Been Easier!
             </h2>
             <p>
-              For the first five communities to sign up, we will tailor our
+              For the first three communities to sign up, we will tailor our
               product, onboard everyone, and provide 24/7 customer support for
-              free for the first 6 months!
+              free for the first month!
             </p>
             <a
               href="mailto:parkspotapplication@gmail.com"
