added info page A src/components/Emphasis.astro M src/components/Nav.astro A src/pages/info-for-residents.astro

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -8,7 +8,8 @@ import logoImg from "../images/parkspot-logo.png";
       <a href="/">
         <img src={logoImg.src} class="h-auto w-28" alt="ParkSpot Logo" />
       </a>
-      <div class="text-right text-white">
+      <div class="flex flex-row gap-4 text-center text-white">
+        <a href="/info-for-residents">Info</a>
         <a href="https://app.park-spot.co/login">Login</a>
       </div>
     </div>
